# MY_SWAMPE

./: .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENCE.txt  README.md  pyproject.toml
.github/workflows/: draft-pdf.yml  main.yml
paper/: Makefile  README.md  paper.bib  paper.md  paper.tex  speed_benchmark.md
paper/benchmark_data/: README.md  cpu_parity_100day_summary.json  cpu_speed_10day_summary.json  gpu_vmap_sweep_10day.json
paper/scripts/: benchmark_gradient.py  compare_long_run_parity.py  make_sensitivity_figure.py  swampe_gpu_vmap_test.ipynb  swampe_gpu_vmap_test.py
retrieval/: README.md
retrieval/scripts/: coverage_study.py  full_retrieval.ipynb  make_dashboard.py  pipeline.py  plot_smc.py  run.sh  run_nas.pbs  run_smc.py  summarize_run.py
retrieval/scripts/tests/: conftest.py  test_mixed_precision.py  test_pipeline.py  test_production_upgrades.py  test_wasp43b_prepare.py  test_wasp43b_realdata_path.py
retrieval/wasp_43b_test/: README.md  run_nas_wasp43b.pbs  run_slurm_wasp43b.sh
retrieval/wasp_43b_test/config/: wasp43b_pilot_gpu.json  wasp43b_production_gpu.json
retrieval/wasp_43b_test/scripts/: compare_gcm_phase_curves.py  fetch_wasp43b_data.py  prepare_wasp43b_observations.py
scripts/: benchmark_new_numerics.py  benchmark_scan.py  generate_reference_parity_fixtures.py
src/my_swamp/: continuation.py  explicit_tdiff.py  filters.py  initial_conditions.py  main_function.py  modEuler_tdiff.py  model.py  plotting.py  semi_implicit_tdiff.py  time_stepping.py
src/my_swampe/: __init__.py  autodiff_utils.py  backend_preflight.py  branching.py  dtypes.py  explicit_tdiff.py  forcing.py  initial_conditions.py  main_function.py  modEuler_tdiff.py  model.py  semi_implicit_tdiff.py  spectral_transform.py
test_retrieval/: SWAMP_W43B.o63563
test_retrieval/scripts/: coverage_study.py  pipeline.py  run.sh  run_nas.pbs  run_smc.py  summarize_run.py
test_retrieval/scripts/tests/: conftest.py  test_pipeline.py
test_retrieval/wasp_43b_test/: SWAMP_W43B.o63559
test_retrieval/wasp_43b_test/scripts/: fetch_wasp43b_data.py
testing/: differentiability_demo.py
unit_tests/: conftest.py  test_autodiff.py  test_backend_preflight.py  test_continuation_roundtrip.py  test_import_and_version.py  test_invalid_input.py  test_model_scan_smoke.py  test_parity_quirks.py  test_parity_reference_regression.py  test_raw_filter.py  test_semi_implicit.py  test_static_spectral_params.py  test_transform_stack.py  test_vmap_smoke.py
