[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-swamp"
dynamic = ["version"]
description = "MY_SWAMP: JAX port + reference implementation of SWAMPE"
readme = "readme.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    { name = "Isaac Malsky", email = "isaacmalsky@gmail.com" },
]
dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "imageio>=2.31",
    "jax>=0.4.31,<0.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/imalsky/MY_SWAMP"
Repository = "https://github.com/imalsky/MY_SWAMP"
"Bug Tracker" = "https://github.com/imalsky/MY_SWAMP/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.11",
    "vulture>=2.11",
    "build>=1.2",
    "twine>=5",
]

[project.scripts]
my-swamp = "my_swamp.main_function:cli_main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.package-data]
my_swamp = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "my_swamp._version.__version__" }

[tool.pytest.ini_options]
markers = [
    "smoke: fast sanity checks suitable for every commit.",
    "parity: strict regression checks against SWAMPE reference fixtures.",
    "perf: benchmark/performance-oriented checks.",
]

[tool.ruff]
target-version = "py39"
src = ["src", "unit_tests", "testing"]
extend-exclude = ["dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.vulture]
ignore_names = [
    "__getattr__",
    "load_data",
    "complex_dtype",
    "tree_flatten",
    "tree_unflatten",
    "write_quiver_gif",
    "pytest_report_header",
    "pytest_configure",
    "spinup",
    "geopot",
]
exclude = ["src/my_swamp.egg-info"]
