[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swampe-jax"
dynamic = ["version"]
description = "SWAMPE-JAX: a differentiable JAX implementation of the SWAMPE shallow-water model for exoplanet atmospheres"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Isaac Malsky", email = "isaacmalsky@gmail.com" },
]
dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "imageio>=2.31",
    "jax>=0.4.31,<0.10",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/imalsky/SWAMPE-JAX"
Repository = "https://github.com/imalsky/SWAMPE-JAX"
"Bug Tracker" = "https://github.com/imalsky/SWAMPE-JAX/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.11",
    "vulture>=2.11",
    "build>=1.2",
    "twine>=5",
]

[project.scripts]
swampe-jax = "my_swampe.main_function:cli_main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.package-data]
my_swampe = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "my_swampe._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["unit_tests"]
markers = [
    "smoke: fast sanity checks suitable for every commit.",
    "parity: strict regression checks against SWAMPE reference fixtures.",
    "perf: benchmark/performance-oriented checks.",
]

[tool.ruff]
target-version = "py310"
src = ["src", "unit_tests", "scripts", "paper/scripts"]
# retrieval/ is restored research/HPC application code with its own domain
# conventions (e.g. I/J grid indices); it is not gated on the package lint.
# Notebooks (*.ipynb) follow normal Colab/Jupyter cell idioms (semicolon-joined
# statements, imports after env-var setup in the same cell) that don't match
# the package's .py style; they are not gated on the package lint either.
extend-exclude = ["dist", "retrieval", "*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.vulture]
ignore_names = [
    "__getattr__",
    "load_data",
    "complex_dtype",
    "tree_flatten",
    "tree_unflatten",
    "write_quiver_gif",
    "pytest_report_header",
    "pytest_configure",
    "spinup",
    "geopot",
]
exclude = ["src/my_swampe.egg-info"]
